--- a/PerandusBacker/Pages/Main.xaml
+++ b/PerandusBacker/Pages/Main.xaml
@@ -13,24 +13,13 @@
     PaneDisplayMode="LeftCompact"
     SelectionFollowsFocus="Enabled"
     OpenPaneLength="150"
-    IsBackButtonVisible="Collapsed">
+    IsBackButtonVisible="Collapsed"
+    SelectionChanged="OnSelectionChanged">
     <NavigationView.MenuItems>
       <NavigationViewItem
-        Icon="Play"
-        Content="Item1"
-        x:Name="SamplePage1Item" />
-      <NavigationViewItem
-        Icon="Save"
-        Content="Item2"
-        x:Name="SamplePage2Item" />
-      <NavigationViewItem
-        Icon="Refresh"
-        Content="Item3"
-        x:Name="SamplePage3Item" />
-      <NavigationViewItem
-        Icon="Download"
-        Content="Item4"
-        x:Name="SamplePage4Item" />
+        Icon="XboxOneConsole"
+        Content="Stash"
+        Tag="StashDashboard.StashExplorer"/>
     </NavigationView.MenuItems>
     <Frame
       x:Name="contentFrame" />
