Add item prices

--- a/PerandusBacker/Controls/ItemsTable.xaml
+++ b/PerandusBacker/Controls/ItemsTable.xaml
@@ -227,6 +227,9 @@
           </DataTemplate>
         </toolkit:DataGridTemplateColumn.CellTemplate>
       </toolkit:DataGridTemplateColumn>
+      <toolkit:DataGridTextColumn
+        Header="Price"
+        Binding="{Binding FullPrice}" />
     </toolkit:DataGrid.Columns>
   </toolkit:DataGrid>
 </UserControl>
