--- a/PerandusBacker/App.xaml
+++ b/PerandusBacker/App.xaml
@@ -2,8 +2,7 @@
   x:Class="PerandusBacker.App"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:local="using:PerandusBacker"
-  RequestedTheme="Dark">
+  xmlns:local="using:PerandusBacker">
   <Application.Resources>
     <ResourceDictionary>
       <Color
