--- a/PerandusBacker/Pages/Main.xaml
+++ b/PerandusBacker/Pages/Main.xaml
@@ -9,7 +9,7 @@
   Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
   <NavigationView
-    x:Name="nvSample"
+    x:Name="NavBar"
     PaneDisplayMode="LeftCompact"
     SelectionFollowsFocus="Enabled"
     OpenPaneLength="150"
