Use StashItem instead of Index

--- a/PerandusBacker/Pages/Navigation/StashDashboard/StashExplorer.xaml
+++ b/PerandusBacker/Pages/Navigation/StashDashboard/StashExplorer.xaml
@@ -51,8 +51,9 @@
           CanReorderTabs="True" />
         <toolkit:Expander
           Grid.Column="1"
+          Background="Transparent"
           Header="Item"
-          IsExpanded="False"
+          IsExpanded="True"
           ExpandDirection="Left">
           <controls:ItemVisualizer />
         </toolkit:Expander>
