--- a/PerandusBacker/Pages/Navigation/StashDashboard/TabView.xaml
+++ b/PerandusBacker/Pages/Navigation/StashDashboard/TabView.xaml
@@ -17,6 +17,6 @@
     </Grid.RowDefinitions>
     <controls:ItemsTable
       Grid.Column="0"
-      StashTabIndex="{x:Bind StashTabIndex}" />
+      StashTab="{x:Bind StashTab}" />
   </Grid>
 </Page>
