--- a/PerandusBacker/App.xaml
+++ b/PerandusBacker/App.xaml
@@ -2,15 +2,15 @@
   x:Class="PerandusBacker.App"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:local="using:PerandusBacker">
+  xmlns:local="using:PerandusBacker"
+  RequestedTheme="Light">
   <Application.Resources>
     <ResourceDictionary>
-      <Color
-        x:Key="SystemAccentColor">#d13438</Color>
       <ResourceDictionary.MergedDictionaries>
         <XamlControlsResources
           xmlns="using:Microsoft.UI.Xaml.Controls" />
-        <!-- Other merged dictionaries here -->
+        <ResourceDictionary
+          Source="ThemeColors.xaml" />
       </ResourceDictionary.MergedDictionaries>
       <!-- Other app resources here -->
     </ResourceDictionary>
