Save when currency price was last loaded to avoid time limit

--- a/PerandusBacker/Pages/Login.xaml
+++ b/PerandusBacker/Pages/Login.xaml
@@ -32,7 +32,7 @@
       Content="Remember Me"
       x:Name="SaveCredentialsCheckBox" />
     <Button
-      Content="Login"
+      Content="Sign In"
       Click="AttemptLogin" />
   </StackPanel>
 </Page>
