Fix search and add no tab message

--- a/PerandusBacker/Pages/Main.xaml
+++ b/PerandusBacker/Pages/Main.xaml
@@ -23,6 +23,7 @@
     <NavigationView.MenuItems>
       <NavigationViewItem
         Content="Stash"
+        x:Name="StashViewItem"
         Tag="StashDashboard.StashExplorer">
         <NavigationViewItem.Icon>
           <FontIcon
